--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,7 +64,7 @@
                     <option data-class-name="red" data-api-name="youtubeapi">Youtube</option>
                     <option data-class-name="dark" data-api-name="pornhubapi">PornHub</option>
                 </select>
-                <form id="search-form" style="grid-area: b;" th:action="@{/}">
+                <form id="search-form" th:action="@{/}">
 
                     <input class="form-control m-1" id="search-form-query" type="text" placeholder="ITMediaで検索"
                         autocomplete="off">
@@ -99,7 +99,7 @@
                     </button>
                 </form>
 
-                <nav id="page" class="text-end" aria-label="Page navigation" style="grid-area: c;">
+                <nav id="page" class="text-end" aria-label="Page navigation">
                     <ul class="pagination mb-0">
                         <li class="page-item">
                             <button class="page-link" id="page-item-prev" type="button" aria-hidden="true"
@@ -115,13 +115,13 @@
                         </li>
                     </ul>
                 </nav>
-                <div id="search-form-filter-tags" class="row g-2 align-items-center" style="grid-area: d;">
+                <div id="search-form-filter-tags" class="row g-2 align-items-center">
                 </div>
             </div>
 
-            <div class="row mb-2 d-grid" id="#akstn">
+            <div class="row mb-2 d-grid mx-auto w-75" id="akstn">
 
-                
+
                 <!-- 天気メイン -->
                 <div class="col" id="main-weather" th:object="${WeatherEntity.weatherList[0]}">
                     <table>
@@ -145,7 +145,23 @@
                 </div>
 
                 <!-- 交通情報メイン -->
-                <div class="col " id="main-traffic">
+                <div class="col " id="main-traffic-jr">
+                    <!-- 運休情報の表示 -->
+
+                    <p class="traffic_title">ＪＲ</p>
+                    <th:block th:if="${jrflg}">
+                        <nobr>
+                            <p class="traffic-message-t">交通情報あり</p>
+                        </nobr>
+                    </th:block>
+                    <th:block th:if="!${jrflg}">
+                        <nobr>
+                            <p class="traffic-message-f">交通情報なし</p>
+                        </nobr>
+                    </th:block>
+                </div>
+
+                <div class="col " id="main-traffic-bus">
                     <!-- 運休情報の表示 -->
 
                     <p class="traffic_title">バス</p>
@@ -155,18 +171,6 @@
                         </nobr>
                     </th:block>
                     <th:block th:if="!${flg}">
-                        <nobr>
-                            <p class="traffic-message-f">交通情報なし</p>
-                        </nobr>
-                    </th:block>
-
-                    <p class="traffic_title">ＪＲ</p>
-                    <th:block th:if="${jrflg}">
-                        <nobr>
-                            <p class="traffic-message-t">交通情報あり</p>
-                        </nobr>
-                    </th:block>
-                    <th:block th:if="!${jrflg}">
                         <nobr>
                             <p class="traffic-message-f">交通情報なし</p>
                         </nobr>
