--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,140 +1,4 @@
 * {
-    --bd-purple: #4c0bce;
-    --bd-violet: #712cf9;
-    --bd-accent: #ffe484;
-    --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
-    --bd-accent-rgb: 255, 228, 132;
-    --bd-pink-rgb: 214, 51, 132;
-    --bd-teal-rgb: 32, 201, 151;
-    --docsearch-primary-color: var(--bd-violet);
-    --docsearch-logo-color: var(--bd-violet);
-    --bd-violet-bg: var(--bd-violet);
-    --bd-sidebar-link-bg: rgba(var(--bd-violet-rgb), 0.1);
-    --bd-pink-rgb: 214, 51, 132;
-    --bs-blue: #0d6efd;
-    --bs-indigo: #6610f2;
-    --bs-purple: #6f42c1;
-    --bs-pink: #d63384;
-    --bs-red: #dc3545;
-    --bs-orange: #fd7e14;
-    --bs-yellow: #ffc107;
-    --bs-green: #198754;
-    --bs-teal: #20c997;
-    --bs-cyan: #0dcaf0;
-    --bs-black: #000;
-    --bs-white: #fff;
-    --bs-gray: #6c757d;
-    --bs-gray-dark: #343a40;
-    --bs-gray-100: #f8f9fa;
-    --bs-gray-200: #e9ecef;
-    --bs-gray-300: #dee2e6;
-    --bs-gray-400: #ced4da;
-    --bs-gray-500: #adb5bd;
-    --bs-gray-600: #6c757d;
-    --bs-gray-700: #495057;
-    --bs-gray-800: #343a40;
-    --bs-gray-900: #212529;
-    --bs-primary: #0d6efd;
-    --bs-secondary: #6c757d;
-    --bs-success: #198754;
-    --bs-info: #0dcaf0;
-    --bs-warning: #ffc107;
-    --bs-danger: #dc3545;
-    --bs-aqua: #f8f9fa;
-    --bs-dark: #212529;
-    --bs-primary-rgb: 13, 110, 253;
-    --bs-secondary-rgb: 108, 117, 125;
-    --bs-success-rgb: 25, 135, 84;
-    --bs-info-rgb: 13, 202, 240;
-    --bs-warning-rgb: 255, 193, 7;
-    --bs-danger-rgb: 220, 53, 69;
-    --bs-aqua-rgb: 248, 249, 250;
-    --bs-dark-rgb: 33, 37, 41;
-    --bs-primary-text: #0a58ca;
-    --bs-secondary-text: #6c757d;
-    --bs-success-text: #146c43;
-    --bs-info-text: #087990;
-    --bs-warning-text: #997404;
-    --bs-danger-text: #b02a37;
-    --bs-aqua-text: #6c757d;
-    --bs-dark-text: #495057;
-    --bs-primary-bg-subtle: #cfe2ff;
-    --bs-secondary-bg-subtle: #f8f9fa;
-    --bs-success-bg-subtle: #d1e7dd;
-    --bs-info-bg-subtle: #cff4fc;
-    --bs-warning-bg-subtle: #fff3cd;
-    --bs-danger-bg-subtle: #f8d7da;
-    --bs-aqua-bg-subtle: #fcfcfd;
-    --bs-dark-bg-subtle: #ced4da;
-    --bs-primary-border-subtle: #9ec5fe;
-    --bs-secondary-border-subtle: #e9ecef;
-    --bs-success-border-subtle: #a3cfbb;
-    --bs-info-border-subtle: #9eeaf9;
-    --bs-warning-border-subtle: #ffe69c;
-    --bs-danger-border-subtle: #f1aeb5;
-    --bs-aqua-border-subtle: #e9ecef;
-    --bs-dark-border-subtle: #adb5bd;
-    --bs-white-rgb: 255, 255, 255;
-    --bs-black-rgb: 0, 0, 0;
-    --bs-body-color-rgb: 33, 37, 41;
-    --bs-body-bg-rgb: 255, 255, 255;
-    --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
-        "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif,
-        "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
-        "Liberation Mono", "Courier New", monospace;
-    --bs-gradient: linear-gradient(180deg,
-            rgba(255, 255, 255, 0.15),
-            rgba(255, 255, 255, 0));
-    --bs-body-font-family: var(--bs-font-sans-serif);
-    --bs-body-font-size: 1rem;
-    --bs-body-font-weight: 400;
-    --bs-body-line-height: 1.5;
-    --bs-body-color: #212529;
-    --bs-emphasis-color: #000;
-    --bs-emphasis-color-rgb: 0, 0, 0;
-    --bs-secondary-color: rgba(33, 37, 41, 0.75);
-    --bs-secondary-color-rgb: 33, 37, 41;
-    --bs-secondary-bg: #e9ecef;
-    --bs-secondary-bg-rgb: 233, 236, 239;
-    --bs-tertiary-color: rgba(33, 37, 41, 0.5);
-    --bs-tertiary-color-rgb: 33, 37, 41;
-    --bs-tertiary-bg: #f8f9fa;
-    --bs-tertiary-bg-rgb: 248, 249, 250;
-    --bs-body-bg: #fff;
-    --bs-body-bg-rgb: 255, 255, 255;
-    --bs-link-color: #0d6efd;
-    --bs-link-color-rgb: 13, 110, 253;
-    --bs-link-decoration: underline;
-    --bs-link-hover-color: #0a58ca;
-    --bs-link-hover-color-rgb: 10, 88, 202;
-    --bs-code-color: #d63384;
-    --bs-highaqua-bg: #fff3cd;
-    --bs-border-width: 1px;
-    --bs-border-style: solid;
-    --bs-border-color: #dee2e6;
-    --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
-    --bs-border-radius: 0.375rem;
-    --bs-border-radius-sm: 0.25rem;
-    --bs-border-radius-lg: 0.5rem;
-    --bs-border-radius-xl: 1rem;
-    --bs-border-radius-2xl: 2rem;
-    --bs-border-radius-pill: 50rem;
-    --bs-box-shadow: 0 0.5rem 1rem rgba(var(--bs-body-color-rgb), 0.15);
-    --bs-box-shadow-sm: 0 0.125rem 0.25rem rgba(var(--bs-body-color-rgb), 0.075);
-    --bs-box-shadow-lg: 0 1rem 3rem rgba(var(--bs-body-color-rgb), 0.175);
-    --bs-box-shadow-inset: inset 0 1px 2px rgba(var(--bs-body-color-rgb), 0.075);
-    --bs-emphasis-color: #000;
-    --bs-form-control-bg: var(--bs-body-bg);
-    --bs-form-control-disabled-bg: var(--bs-secondary-bg);
-    --bs-highaqua-bg: #fff3cd;
-    --bs-breakpoint-xs: 0;
-    --bs-breakpoint-sm: 576px;
-    --bs-breakpoint-md: 768px;
-    --bs-breakpoint-lg: 992px;
-    --bs-breakpoint-xl: 1200px;
-    --bs-breakpoint-xxl: 1400px;
-
     --min-width: 15rem;
     --min-height: 15rem;
 
@@ -257,10 +121,14 @@ svg {
 }
 
 body {
-    --color1: 13, 110, 253;
-    --color2: 255, 228, 132;
-    --color3: 112, 44, 249;
-    --color4: 214, 51, 132;
+    --top-left-color: 13, 110, 253, var(--alpha1);
+    --top-right-color: 255, 228, 132, var(--alpha1);
+    --center-right-color: 112, 44, 249, var(--alpha1);
+    --center-left-color: 214, 51, 132, var(--alpha1);
+    --bottom-left-color: 0, 0, 0, 1;
+    --bottom-right-color: 0, 0, 0, 1;
+
+    --alpha1: 0.5; /*0.5*/
 
     width: 100%;
     height: 100vh;
@@ -275,16 +143,22 @@ body {
             rgba(255, 255, 255, 0.01),
             rgba(255, 255, 255, 1) 85%),
         radial-gradient(ellipse at top left,
-            rgba(var(--color1), 0.5),
+            rgba(var(--top-left-color)),
             transparent 50%),
         radial-gradient(ellipse at top right,
-            rgba(var(--color2), 0.5),
+            rgba(var(--top-right-color)),
             transparent 50%),
         radial-gradient(ellipse at center right,
-            rgba(var(--color3), 0.5),
+            rgba(var(--center-right-color)),
             transparent 50%),
         radial-gradient(ellipse at center left,
-            rgba(var(--color4), 0.5),
+            rgba(var(--center-left-color)),
+            transparent 50%),
+        radial-gradient(ellipse at bottom left,
+            rgba(var(--bottom-left-color)),
+            transparent 50%),
+        radial-gradient(ellipse at bottom right,
+            rgba(var(--bottom-right-color)),
             transparent 50%);
 }
 
@@ -304,9 +178,11 @@ main {
 #akstn{
     display: none !important;
     
-    grid-template:
-    "a a b c" 1fr
-    "d d e f" 1fr / 1fr 1fr 1fr 1fr;
+    grid-template-areas:
+    "a a b c"  
+    "d d e f";
+    grid-auto-rows: 1fr;
+    grid-auto-columns: 1fr;
     grid-gap: 0.5rem;
 }
 
@@ -315,6 +191,8 @@ main {
     border-style: solid;
     border-width: 1px;
     border-color: rgba(var(--border-color));
+
+    background-color:rgba(var(--search-form-bg-color)) !important;
 }
 
 #logo {
@@ -326,9 +204,7 @@ main {
     grid-area: b;
     display: flex;
 
-    min-width: var(--min-width);
     max-width: 560px;
-    width: 100%;
     height: auto;
 
     align-items: center;
@@ -427,7 +303,7 @@ main {
 }
 
 .top-screen header {
-    overflow: auto;
+    overflow-y: auto;
 
     display: grid;
     border-style: none;
@@ -587,12 +463,12 @@ main {
     content: "Next";
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
     #aiueo {
         grid-template:
-            "a . c" auto
-            "b b b" auto
-            "d d d" auto / 1fr auto 1fr !important;
+            "a c" auto
+            "b b" auto
+            "d d" auto / 1fr 1fr !important;
     }
 
     #aiueo #page>ul {
