--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -99,7 +99,7 @@
                     </button>
                 </form>
 
-                <nav id="page" class="text-end" aria-label="Page navigation">
+                <nav id="page" class="justify-content-end" aria-label="Page navigation">
                     <ul class="pagination mb-0">
                         <li class="page-item">
                             <button class="page-link" id="page-item-prev" type="button" aria-hidden="true"
@@ -122,122 +122,64 @@
             <div class="row mb-2 d-grid" id="akstn">
 
                 <!-- 天気メイン -->
-                <div class="col" id="main-weather" th:object="${WeatherEntity.weatherList[0]}">
+                <div class="col tile" id="main-weather" th:object="${WeatherEntity.weatherList[0]}">
                     <div>天気</div>
-                    
-                    <table>
-                        <!-- 天気img表示 -->
-                        <td><img th:src="*{svg}"></td>
-                        <!-- 地域表示 -->
-                        <td>
-                            <nobr>
-                                <p class="where-weather"><span th:text="*{prefecture}"></span><span
-                                        th:text="*{city}"></span>の天気
-                                </p>
-                            </nobr>
-                            <!-- 天気表示 -->
-                            <p class="weather-information"><span th:text="*{telop}"></span></p>
-                            <!-- 最高気温 -->
-                            <p class="max-temperature">最高気温：<span th:text="*{temperature_max}"></span>℃</p>
-                            <!-- 最低気温 -->
-                            <p class="min-temperature">最低気温：<span th:text="*{temperature_min}"></span>℃</p>
-                        </td>
-                    </table>
+
+                    <div>
+                        <span th:text="*{prefecture}">北海道</span>
+                        <span th:text="*{city}">札幌</span>
+                    </div>
+
+                    <img th:src="*{svg}" src="https://www.jma.go.jp/bosai/forecast/img/215.svg">
+
+                    <div class="">
+                        <span th:text="|*{temperature_min}|">--</span>
+                        <span>/</span>
+                        <span th:text="|*{temperature_max}|">1</span>
+                        <span>℃</span>
+                    </div>
+
                 </div>
 
                 <!-- 交通情報メイン -->
                 <div class="col" id="main-traffic-jr">
                     <div>JR交通情報</div>
                     <!-- 運休情報の表示 -->
-
-                    <p class="traffic_title">ＪＲ</p>
-                    <th:block th:if="${jrflg}">
-                        <nobr>
-                            <p class="traffic-message-t">交通情報あり</p>
-                        </nobr>
-                    </th:block>
-                    <th:block th:if="!${jrflg}">
-                        <nobr>
-                            <p class="traffic-message-f">交通情報なし</p>
-                        </nobr>
-                    </th:block>
+                    <div th:text="${jrflg} ? あり : なし"></div>
                 </div>
 
                 <div class="col " id="main-traffic-bus">
                     <div>バス交通情報</div>
                     <!-- 運休情報の表示 -->
-
-                    <p class="traffic_title">バス</p>
-                    <th:block th:if="${flg}">
-                        <nobr>
-                            <p class="traffic-message-t">交通情報あり</p>
-                        </nobr>
-                    </th:block>
-                    <th:block th:if="!${flg}">
-                        <nobr>
-                            <p class="traffic-message-f">交通情報なし</p>
-                        </nobr>
-                    </th:block>
+                    <div th:text="${flg} ? あり : なし"></div>
                 </div>
 
                 <!-- 占いメイン -->
-                <div class="col " id="main-divination">
+                <div class="col " id="main-divination" th:object="${HoroscopeEntity.horoscopeList[0]}">
                     <div>占い</div>
-                    <div th:object="${HoroscopeEntity.horoscopeList[0]}">
-                        <table>
-                            <td>
-                                <nobr>
-                                    <p class="d-word1">今日一番</p>
-                                </nobr>
-                                <nobr>
-                                    <p class="d-word2">運のいい人は</p>
-                                </nobr>
-                                <!-- 1位の人物の星座を表示 -->
-                                <nobr>
-                                    <p class="lacky-man"><span th:text="*{sign}"></span></p>
-                                </nobr>
-                                <nobr>
-                                    <p class="d-word3">の方です</p>
-                                </nobr>
-                            </td>
-                            <!-- 1位の星座img表示 -->
-                            <td><img th:src="*{photopath}"></td>
-                        </table>
-                    </div>
+
+                    <div>今日一番</div>
+                    <div>運のいい人は</div>
+                    <span th:text="*{sign}"></span>
+                    <img th:src="*{photopath}">
                 </div>
 
                 <!-- 注意報警報メイン -->
-                <div class="col " id="main-alert">
+                <div class="col" id="main-alert">
                     <div>警報注意報</div>
 
-                    <nobr>
-                        <p class="alert-title">現在の警報注意報</p>
-                    </nobr>
-
-                    <table>
-                        <tr>
-                            <th:block th:each="alert : ${Weather_alertEntity.weather_alertnameList}">
-                                <td>
-                                    <p th:class="${alert.alert_color}"><span th:text="${alert.name}"></span></p>
-                                </td>
-                            </th:block>
-                        </tr>
-                    </table>
+                    <div th:each="alert : ${Weather_alertEntity.weather_alertnameList}">
+                        <span th:text="${alert.name}"></span>
+                    </div>
                 </div>
 
                 <!-- チャートメイン -->
                 <div class="col" id="main-chart" th:object="${ChartEntity.chartList[0]}">
                     <div>チャート</div>
 
-                    <nobr>
-                        <p class="chart-title">Bitcoin/日本円のチャート</p>
-                    </nobr>
-                    <!-- 現在チャート表示 -->
-                    <nobr>
-                        <p class="real-time-chart"><span th:text="*{bitcoin}"></span></p>
-                    </nobr>
-                    <!-- レートの上がり下がりの表示 -->
-                    <p class="chart-difference"><span th:text="*{rate}"></span>%</p>
+                    <div>Bitcoin/日本円のチャート</div>
+                    <span th:text="*{bitcoin}"></span>
+                    <span th:text="|*{rate} %|"></span>
                 </div>
             </div>
         </div>
