--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -178,14 +178,14 @@ main {
     overflow: auto;
 }
 
-#akstn {
+#tiles {
     display: none !important;
     grid-auto-columns: minmax(150px, 1fr);
     grid-gap: 0.5rem;
 }
 
 @media (min-width: 1200px) {
-    #akstn {
+    #tiles {
         grid-template-areas:
             "a a b c"
             "d d e f";
@@ -197,7 +197,7 @@ main {
 }
 
 @media (max-width: 1200px) {
-    #akstn {
+    #tiles {
         grid-template-areas:
             "a b"
             "c d"
@@ -210,7 +210,7 @@ main {
 }
 
 
-#akstn .col {
+#tiles .col {
     border-radius: 10px;
     border-style: solid;
     border-width: 1px;
@@ -304,6 +304,8 @@ main {
 
 #search-form-filter-tags {
     grid-area: d;
+
+    align-items: center;
 }
 
 #filterForm .form-select {
@@ -363,10 +365,10 @@ main {
     justify-content: center;
     align-content: center;
 
-    height: 70vh;
+    height: 90vh;
 }
 
-.top-screen #akstn {
+.top-screen #tiles {
     display: grid !important;
 }
 
@@ -414,6 +416,10 @@ main {
     aspect-ratio: 1/1;
 }
 
+
+
+
+
 .col {
     display: grid;
     grid-gap: 0.5rem;
@@ -432,6 +438,8 @@ main {
 .col:hover {
     box-shadow: var(--box-shadow);
 }
+
+
 
 .col.item {
     grid-template: "a a" auto "b b" auto "c d" auto / 1fr 1fr !important;
@@ -468,6 +476,45 @@ main {
     display: none;
 }
 
+
+
+.col.tile {
+    grid-gap: 1rem;
+}
+
+.col.tile .title {
+    height: auto;
+}
+
+.col.tile section {
+    display: grid;
+}
+
+.col.tile section>* {
+    width: 100%;
+    height: auto;
+
+    display: flex;
+
+    justify-content: center;
+    justify-items: center;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    text-align: center;
+}
+
+.col.tile section img {
+    aspect-ratio: 1/1;
+
+    width: 100%;
+    max-width: 150px;
+}
+
+
+
+
 .pagination {
     --bs-pagination-bg: transparent;
     --bs-pagination-border-color: rgba(var(--border-color));
@@ -482,12 +529,20 @@ main {
     --bs-pagination-active-border-color: transparent;
 }
 
+#page{
+    justify-content: end;
+}
+
 #page-item-prev::after {
     content: "Prev";
 }
 
 #page-item-next::after {
     content: "Next";
+}
+
+#search-form-filter-tags{
+    
 }
 
 @media (max-width: 1200px) {
@@ -582,44 +637,10 @@ main {
     grid-area: f;
 }
 
-.col.tile {
-    grid-gap: 1rem;
-}
-
-.col.tile .title {
-    height: auto;
-}
-
-.col.tile section {
-    display: grid;
-}
-
-.col.tile section>* {
-    width: 100%;
-    height: auto;
-
-    display: flex;
-
-    justify-content: center;
-    justify-items: center;
-    align-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    text-align: center;
-}
-
-.col.tile section>*>img {
-    aspect-ratio: 1/1;
-
-    width: 100%;
-    max-width: 150px;
-}
-
 #chanceOfRainGraph{
     display: grid;
     grid-template:
-                "aa .. .. .. .. .. .. .. .."
+                "aa .. .. .. .. .. .. .. .." 1fr
                 ".. c1 .. c2 .. c3 .. c4 .." 3fr
                 "t1 .. t2 .. t3 .. t4 .. t5" 1fr;
     grid-auto-columns: 1rem;
@@ -627,47 +648,60 @@ main {
     justify-content: center;
 }
 
-.col.tile section .time {
+.time {
     width: 1rem;
     align-self: end;
     font-size: small;
 }
 
-.col.tile section .chanceRain{
-    align-self: end;
-    width: 1rem;
-    background-color: rgba(var(--box-shadow-color));
-}
-.chanceRain[data-percentage="100%"]{
+
+.chanceRain{
+    display: flex;
+
+    align-items: end;
+    width: 100%;
     height: 100%;
 }
-.chanceRain[data-percentage="90%"]{
+.chanceRain:hover{
+    background-color: rgba(var(--box-shadow-color)) !important;
+}
+.chanceRain > div{
+    width: 100%;
+    background-color: rgba(var(--box-shadow-color));
+    border-color: rgba(var(--box-shadow-color));
+    border-style: solid;
+    border-width: 1px
+}
+.chanceRain[data-percentage="100%"] > div{
+    height: 100%;
+}
+.chanceRain[data-percentage="90%"] > div{
     height: 90%;
 }
-.chanceRain[data-percentage="80%"]{
+.chanceRain[data-percentage="80%"] > div{
     height: 80%;
 }
-.chanceRain[data-percentage="70%"]{
+.chanceRain[data-percentage="70%"] > div{
     height: 70%;
 }
-.chanceRain[data-percentage="60%"]{
+.chanceRain[data-percentage="60%"] > div{
     height: 60%;
 }
-.chanceRain[data-percentage="50%"]{
+.chanceRain[data-percentage="50%"] > div{
     height: 50%;
 }
-.chanceRain[data-percentage="40%"]{
+.chanceRain[data-percentage="40%"] > div{
     height: 40%;
 }
-.chanceRain[data-percentage="30%"]{
+.chanceRain[data-percentage="30%"] > div{
     height: 30%;
 }
-.chanceRain[data-percentage="20%"]{
+.chanceRain[data-percentage="20%"] > div{
     height: 20%;
 }
-.chanceRain[data-percentage="10%"]{
+.chanceRain[data-percentage="10%"] > div{
     height: 10%;
 }
-.chanceRain[data-percentage="0%"]{
+.chanceRain[data-percentage="0%"] > div{
     height: 0%;
 }
