リンク貼り

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -122,7 +122,7 @@
             <div class="row mb-2 d-grid" id="tiles">
 
                 <!-- 天気メイン -->
-                <a class="col tile" id="main-weather" th:object="${WeatherEntity.weatherList[0]}" th:href="@{}">
+                <a class="col tile" id="main-weather" th:object="${WeatherEntity.weatherList[0]}" th:href="@{/Weather}">
                     <div class="title">天気</div>
                     <section>
                         <div style="grid-area: a;">
