--- a/src/main/resources/templates/morning/divination.html
+++ b/src/main/resources/templates/morning/divination.html
@@ -1,61 +1,84 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>Morning 占い画面</title>
+	<meta charset="UTF-8">
+	<title>Morning 占い画面</title>
 </head>
-<link rel="stylesheet" th:href="@{/morning/divination.css}"
-	href="../static/morning/divination.css">
-<link rel="stylesheet" th:href="@{/morning/stay.css}"
-	href="../static/morning/stay.css">
+<link rel="stylesheet" th:href="@{/morning/divination.css}" href="../static/morning/divination.css">
+<link rel="stylesheet" th:href="@{/morning/stay.css}" href="../static/morning/stay.css">
+
 <body>
 
 	<!-- メニューバー -->
 	<div class="menu-bar">
-	<div class="menu-today"><script src="morning/days.js"></script></div>
+		<div class="menu-today">
+			<script src="morning/days.js"></script>
+		</div>
 		<div class="menu-bar-menu">
-		<table>
-			<td><nobr><a th:href="@{/Weather}">天気</a></nobr>
-			<nobr><a th:href="@{/Weather_alert}">警報・注意報</a></nobr>
-			<nobr><a th:href="@{/Horoscope}">占い</a></nobr>
-			<td><nobr><p class="menu-bar-title"><a th:href="@{/main}"><img src="morning/Morning.png"/></a></p></nobr>
-			<td><nobr><a th:href="@{/Traffic}">バス情報</a></nobr>
-			<nobr><a th:href="@{/Jr}">ＪＲ情報</a></nobr>
-			<nobr><a th:href="@{/Chart}">チャート</a></nobr>
-		</table>
+			<table>
+				<td>
+					<nobr><a th:href="@{/Weather}">天気</a></nobr>
+					<nobr><a th:href="@{/Weather_alert}">警報・注意報</a></nobr>
+					<nobr><a th:href="@{/Horoscope}">占い</a></nobr>
+				<td>
+					<nobr>
+						<p class="menu-bar-title"><a th:href="@{/main}"><img src="morning/Morning.png" /></a></p>
+					</nobr>
+				<td>
+					<nobr><a th:href="@{/Traffic}">バス情報</a></nobr>
+					<nobr><a th:href="@{/Jr}">ＪＲ情報</a></nobr>
+					<nobr><a th:href="@{/Chart}">チャート</a></nobr>
+			</table>
 		</div>
 		<!-- 台的なもの -->
 		<footer class="platform">
-			<p>© 2022 - 2023  HCS CORPORATION.</p>
+			<p>© 2022 - 2023 HCS CORPORATION.</p>
 		</footer>
 	</div>
-	<div class="speace"><p>error</p></div>
-	
+	<div class="speace">
+		<p>error</p>
+	</div>
+
 	<!-- タイトル表示 -->
 	<p class="title">星座占い一覧</p>
 	<div class="title-space"></div>
-	
+
 	<!-- 12星座の箱 -->
 	<div class="divination-context">
 		<!-- 順位表示 -->
-		<th:block th:each="divination : ${HoroscopeEntity.horoscopeList}">
-		<div class="constellations-menu">
-			<table>
-				<!-- 順位・星座の表示 -->
-				<td><nobr><p class="rank">第<span th:text="${divination.rank}"></span>位.<span th:text=${divination.sign}></span></p></nobr>
-				<!-- コメント表示 -->
-				<p class="comment">コメント：<span th:text="${divination.content}"></span></p>
-				<!-- ラッキーアイテムの表示 -->
-				<nobr><p class="lackyitem">ラッキーアイテム：<span th:text="${divination.lucky_item}"></span></p></nobr>
-				<!-- 評価 -->
-				<p class="comprehensive-evaluation">総合評価：<span th:text="${divination.total}"></span>／5</p>
-				<!-- 星座のimg表示 -->
-				<td><img th:src="${divination.photopath}">
-			</table>
-		</div>
+		<th:block th:each="divination, stat : ${HoroscopeEntity.horoscopeList}">
+			<div>
+				<div th:text="${stat.count}"></div>
+				<img th:src="${divination.sign.resourceSvg}">
+				<div th:text="${divination.info.content.substring(0, divination.info.content.indexOf('。') + 1)}"></div>
+			</div>
+
+			<div th:text="${stat.count}"></div>
+			<div class="constellations-menu">
+				<table>
+					<!-- 順位・星座の表示 -->
+					<td>
+						<nobr>
+							<p class="rank">第<span th:text="${divination.info.rank}"></span>位.<span
+									th:text=${divination.info.sign}></span></p>
+						</nobr>
+						<!-- コメント表示 -->
+						<p class="comment">コメント：<span th:text="${divination.info.content}"></span></p>
+						<!-- ラッキーアイテムの表示 -->
+						<nobr>
+							<p class="lackyitem">ラッキーアイテム：<span th:text="${divination.info.item}"></span></p>
+						</nobr>
+						<!-- 評価 -->
+						<p class="comprehensive-evaluation">総合評価：<span th:text="${divination.info.total}"></span>／5</p>
+						<!-- 星座のimg表示 -->
+					<td><img th:src="${divination.sign.resourcePng}">
+				</table>
+			</div>
 		</th:block>
 	</div>
 	<!-- 下のスペース -->
 	<div class="bottom-space"></div>
 </body>
+
 </html>
