--- a/src/main/resources/templates/morning/main.html
+++ b/src/main/resources/templates/morning/main.html
@@ -170,8 +170,16 @@
 			<p class="chart-difference"><span th:text="*{rate}"></span>%</p>
 		</div>
 	</div>
+	<!-- ボタンボックス -->
+	<div class="remove-box">
+		<p id="text"></p>
+	</div>
+
 	<!-- 下のスペース -->
 	<div class="bottom-space"></div>
+<script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+<script src="js/btn.js"></script>
+<script src="js/none.js"></script>
 </body>
 
 </html>
